<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SecondActivity">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="40dp">


        <ImageView
            android:id="@+id/instituteLogo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/splash_icon" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userNameText"
            android:text="@string/email"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_below="@id/instituteLogo"
            android:layout_marginTop="30dp"/>


        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:background="@drawable/edittext_bg"
            android:layout_below="@id/userNameText"
            android:hint="@string/enter_your_email" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/passwordText"
            android:text="@string/password"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_below="@id/userName"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/passWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:background="@drawable/edittext_bg"
            android:layout_below="@id/passwordText"
            android:hint="@string/enter_your_password" />



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passWord"
            android:layout_marginTop="35dp"
            android:id="@+id/login"
            android:layout_centerHorizontal="true"
            android:text="@string/login"
            android:textSize="16sp"
            android:textStyle="bold" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/login">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:id="@+id/dontHaveText"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="20dp"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_signup"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                android:id="@+id/signUpText"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:textColor="@color/themeColor"
                android:layout_toEndOf="@id/dontHaveText"/>
        </RelativeLayout>




    </RelativeLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_centerInParent="true"/>


</RelativeLayout>